2010-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora_modules.js: Changed the enable
	condition to the snmp walk button in the network to improve
	the usability for bug 3102823

2010-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/fgraph.php: Fixed event graphs by user for
	bug 3102830

2010-11-04  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_ui.php: Check that the alert has a 'standby' column
	  (compound alerts don't have it).

2010-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/db/db_purge.php: fixed old value "1" for "All" groups.
	
	Fixes: #3102844

2010-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/users_connected.php: fixed call to operation function.
	
	Fixes: #3102855

2010-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_reporting.php: fixed warning in foreach loop.

2010-11-04  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents/incident.php: Fixed incidents filter

2010-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_config.php: fixed empty spaces the list of ACL IP.

2010-11-04  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Do not propagate compressed data to dates in the
	  future in any charts.

2010-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_db.php: in function __ fixed when the Pandora don't
	have extensions.
	
	* operation/events/events_rss.php: cleaned source code.
	
	* operation/events/events_list.php: added more info in the hidden expanded
	row.
	
	Fixes: #3102826

2010-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/module_groups.php: fixed a unset $fired var.
	
	Fixes: #3102791

2010-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/events/events_marquee.php: fixed the error SQL message and
	save corretly the audit.
	
	Fixes: #3102788

2010-11-04  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/manage_export.php,